# cortex

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md
.claude/hooks/: hooks.json
.cortex/: config.toml  consolidated.db
.cortex/skills/: aws-bedrock-integration-guide.md  aws-bedrock-integration.md  cortex-memory-system-architecture.md  fts5-memory-relevance-retrieval.md  fts5-search-configuration.md  mcp-server-implementation.md  rusqlite-borrow-management.md  rust-cli-full-text-search.md  rust-sqlite-patterns.md  rustls-cross-platform-builds.md
.github/workflows/: ci.yml  release.yml
autoresearch/: .gitignore  README.md  agent_prompt.md  autonomous_loop.sh  command_with_timeout.py  program.md  render_progress.py  results.tsv  run_agent_iteration.sh  run_eval.sh  score_compare.py
eval/: benchmark.json
src/: config.rs  context.rs  db.rs  dream.rs  eval.rs  init.rs  llm.rs  main.rs  mcp.rs  models.rs  skills.rs  sleep.rs  wake.rs
