[package]
name = "cortex"
version = "0.2.1"
edition = "2024"
description = "Repo-local cognitive memory for AI agents"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "6"
